<resources>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="default_notification_channel_name" translatable="true">news</string>
    <string name="facebook_app_id">1676012855775799</string>
    <string name="fb_login_protocol_scheme">fb1676012855775799</string>
    <string name="invite_friends_market_url" translatable="false">https://k7vha.app.goo.gl/Ajzc</string>
    <string name="invite_friends_market_url_short" translatable="false">https://k7vha.app.goo.gl/Ajzc</string>
    <string name="invite_friends_market_url_image" translatable="false">https://lh3.googleusercontent.com/EKOZWRUuVZ4EEDDXRQ5DeS45GVMSIWPY-cVzz4-AuGJaNn2KxYxmgdIjmisPgGMnt9o=w300-rw</string>
    <string name="invite_friends_toast_after_share">Você está enviando a URL do Google Play do Aplicativo Moovdis</string>
    <string name="invite_friends_share_chooser">Compartilhar Moovdis</string>
    <string name="app_name">Acessibilidade</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main">Acessibilidade</string>
    <string name="app_name_saud_init">Bem-vindo ao MoovDis</string>
    <string name="app_name_saud_end">&#8230;seu caminho acessível</string>
    <string name="plase_wait">Por favor, aguarde&#8230;</string>
    <string name="ops">Algo deu errado</string>
    <string name="toast_playservices_unrecoverable">Google Play Services está indisponível. Por favor, faça a instalação para continuar</string>
    <string name="first_access">Olá, este é seu primeiro acesso. Por favor, faça seu cadastro no aplicativo.</string>
    <string name="welcome">Olá %1$s</string>
    <string name="welcome_no_name">Olá cidadão</string>
    <string name="welcome_pontos">0</string>
    <string name="action_begin">Início</string>
    <string name="action_settings">Preferências</string>
    <string name="action_map">Mapa</string>
    <string name="action_placar">Placar</string>
    <string name="action_minhas_rotas">Minhas rotas</string>
    <string name="actions_feeds">Feeds</string>
    <string name="action_virtual_assist">Assistente Virtual</string>
    <string name="action_invite_friends">Convidar amigos</string>
    <string name="action_invite_friends_short">+ amigos</string>
    <string name="action_test">Teste</string>
    <string name="action_about">Sobre o aplicativo</string>
    <string name="assist_virtual_name">Cecy</string>
    <string name="lets_start">Vamos começar?</string>
    <string name="about_you">Sobre você</string>
    <string name="botao_salvar_description">Clique no botão para salvar as configurações</string>
    <string name="aba_description">Você está em Preferências. Existem duas abas para realizar as suas configurações do Sistema. Na primeira aba você configura suas definições e na segunda aba seus dados (Nome, E-mail e Data de Nascimento)</string>
    <string name="config_sucesso">Configuração realizada com sucesso!!</string>
    <string name="imagem_cadeira_rodas">Imagem de cadeira de rodas</string>
    <string name="text_desloco_cadeira">Se você se locomove em uma cadeira de rodas, serão utilizados as definições desta cadeira e serão sugeridos caminhos que são acessíveis ao seu equipamento</string>
    <string name="text_sou_def_visual">Se você é deficiente visual não se preocupe. Nossa assistente virtual lhe guiará e o apoiará na utilização do aplicativo</string>
    <string name="text_no_def">Que bom que você também está aqui. Suas contribuições ajudarão outros usuários a encontrar caminhos e locais mais acessíveis</string>
    <string name="welcome_text">Bem-vindo ao MoovDis</string>
    <string name="config_condition">Qual a sua atual condição?</string>
    <string name="sou_def_visual">Sou deficiente visual</string>
    <string name="uso_cadeira">Desloco-me em cadeira de rodas</string>
    <string name="text_largura_cadeira">Largura da cadeira (cm)</string>
    <string name="largura_cadeira_default">65</string>
    <string name="cadeira_motorizada">Sua cadeira é motorizada?</string>
    <string name="habilitado">Habilitado</string>
    <string name="desabilitado">Desabilitado</string>
    <string name="largura_cadeira">Largura da cadeira de rodas</string>
    <string name="no_def">Não sou deficiente visual nem desloco-me em cadeira de rodas</string>
    <string name="acessibilidade">Acessibilidade</string>
    <string name="acessibilidade_ativar">Deseja ajustar as configurações de acessibilidade do seu aparelho agora?</string>
    <string name="outras_defs">Possuo outra deficiência física</string>
    <string name="informe_qual">Informe qual</string>
    <string name="informe_helper">Informe se você possui outra deficiência ou usa aparelho para apoio à locomoção, como muleta ou andador, por exemplo.</string>
    <string name="nome_usuario">Qual o seu nome?</string>
    <string name="email_usuario">Qual o seu e-mail?</string>
    <string name="data_nasc">Data de nascimento</string>
    <string name="formato_data">DD/MM/AAAA</string>
    <string name="tooltip_calendar">Clique no botão para exibir o calendário e selecionar a data de nascimento</string>
    <string name="name">Nome</string>
    <string name="email">E-mail</string>
    <string name="tooltip_foto">Clique no botão para tirar uma foto do seu perfil</string>
    <string name="foto_perfil">Foto do seu perfil</string>
    <string name="campo_obrigatorio">%1$s é obrigatório</string>
    <string name="campo_invalido">%1$s é inválido</string>
    <string name="search_address">Buscar endereço&#8230;</string>
    <string name="touch_to_speak">Fale agora</string>
    <string name="speech_not_supported">Desculpe! Seu dispositivo não aceita comando de voz</string>
    <string name="speech_country">Suportado apenas português no momento</string>
    <string name="tap_on_mic">Clique no botão do microfone para falar o endereço que deseja pesquisar</string>
    <string name="report_access">Botão para reportar acessibilidade</string>
    <string name="report_inaaccess">Botão para reportar inacessibilidade</string>
    <string name="ocorrencia_sucesso">Marcação adicionada com sucesso!</string>
    <string name="sidewalk_sucesso">Calçada adicionada com sucesso!</string>
    <string name="ocorrencia_update_sucesso">Marcação atualizada com sucesso!</string>
    <string name="current_position">Posição atual</string>
    <string name="permission_denied">Permissão negada para acessar dispositivo</string>
    <string name="map_not_read">Mapa não está pronto</string>
    <string name="alertas_next">Existem %1$d alertas próximos a você</string>
    <string name="alerta_next">Existe 1 alerta próximo a você</string>
    <string name="rota">Rota</string>
    <string name="rota_nao_encontrada">Nenhuma rota encontrada entre os pontos de origem e destino selecionados</string>
    <string name="rota_longa">Rota Longa</string>
    <string name="rota_experimental">Olá, esta é uma rota extensa. Como estamos em versão experimental, sugerimos a realização de rotas de até 1,5km. Caso deseje prosseguir, tome cuidado!</string>
    <string name="versao_beta">Versão beta da rota. Seja cuidadoso! Ajude a melhorar o caminho reportando a acessibilidade da região.</string>
    <string name="etapa">Etapas</string>
    <string name="etapa_result">Imagem indicando que o conteúdo tem rolagem</string>
    <string name="navigation">Navegar</string>
    <string name="tracar_rota">Traçar rota para o endereço pesquisado</string>
    <string name="info_distancia_no_alert"><![CDATA[Distância: <font color=\'#008000\'>%1$s</font> %2$s]]></string>
    <string name="info_distancia_one_alert"><![CDATA[Distância: <font color=\'#008000\'>%1$s</font> - 1 alerta de atenção %2$s]]></string>
    <string name="info_distancia"><![CDATA[Distância: <font color=\'#008000\'>%1$s</font> - %2$d alertas de atenção %3$s]]></string>
    <string name="etapa_rota"><![CDATA[Partida em <font color=\'#1E90FF\'><b>%1$s</b></font> para chegar em <font color=\'#FFA500\'><b>%2$s</b></font>]]></string>
    <string name="calcada_estreita"><![CDATA[<font color=\'red\' size=\'2\'> - Cuidado! Calçada estreita na rota</font>]]></string>
    <string name="etapa_instruct">%2$s percorrendo %1$s </string>
    <string name="etapa_principal">&lt;br&gt;&lt;br&gt;&lt;i&gt;Atenção! Estão sendo mostradas as etapas da rota principal. Entretanto existem rotas alternativas!!&lt;/i&gt;</string>
    <string name="location_waiting">Não foi possível identificar a localização ou endereço pesquisado</string>
    <string name="not_now">Cancelar</string>
    <string name="sim_lets_go">Confirmar</string>
    <string name="improve_marker">Melhore a qualidade da marcação deixando um comentário e adicionando uma foto</string>
    <string name="comment">Escreva um comentário</string>
    <string name="take_picture">Tirar uma foto da ocorrência</string>
    <string name="thanks">Obrigado</string>
    <string name="aba_description_route">Abas que indicam as alternativas de rotas</string>
    <string name="next_route">Próxima rota</string>
    <string name="previous_route">Rota anterior</string>
    <string name="route_option">opcão de rota %1$d</string>
    <string name="elevation_description">imagem descrevendo a elevação da rota</string>
    <string name="inform_sidewal_type">Informar o tipo da calçada</string>
    <string name="falha_route">Desculpe, houve uma falha ao calcular a rota desejada.</string>
    <string name="calc_route">Calculando Rota</string>
    <string name="no_weelchair_route">Não foi possível determinar uma rota segura para Cadeira de Rodas. Calculando rota por caminhada. Tome cuidado!</string>
    <string name="try_again">Aguarde! Ainda estou tentando calcular a rota</string>
    <string name="danger_obstacule">Defeito na Calçada</string>
    <string name="rampa_access">Rampa de Acesso</string>
    <string name="restroom_acessible">Banheiro Acessível</string>
    <string name="bus">Ônibus Piso Baixo</string>
    <string name="blind_guideline">Guia na calçada</string>
    <string name="parking">Estacionamento</string>
    <string name="img_moeda">Imagem que representa moedas. Direciona para a tela de placar.</string>
    <string name="foto_perfil_placar">Foto do Perfil do Usuário que está nesta posição do Placar</string>
    <string name="posicao_placar_geral">Posição no placar geral</string>
    <string name="nome_pessoa">Nome do cidadão</string>
    <string name="qtde_moedas">Quantidade de moedas</string>
    <string name="invite_google">Amigos do Google</string>
    <string name="invite_whats">Amigos do Whatsapp</string>
    <string name="friends_image">Imagem de amigos</string>
    <string name="invite_request">Informe seus amigos sobre o aplicativo e divirtam-se juntos</string>
    <string name="about_detail">Parte de um projeto do grupo de pesquisa em Inteligência Coletiva da UTFPR, o  Moovdis tem o objetivo de promover a inclusão de social de pessoas com deficiência física e visual levando em consideração as diversas dificuldades que enfrentam em seu deslocamento do dia-a-dia.</string>
    <string name="about_detail_1">Através de uma rápida contribuição, você pode contribuir para melhoria da sua cidade mapeando a acessibilidade urbana, tais como: informar um buraco em calçada, obra, criminalidade, ou ainda, mapear coisas boas, como: rampa de acessibilidade, prática de esportes para deficientes, pontos de ônibus, etc.</string>
    <string name="about_detail_2">Também é possível obter notícias sobre acessibilidade que estão rolando em redes sociais.</string>
    <string name="about_detail_3">Contribua e caso tenha sugestões para melhoria, nos mande uma mensagem.</string>
    <string name="send_feedback_mail">Enviar um e-mail de sugestão para os desenvolvedores</string>
    <string name="two_friends">Imagem de dois gatinhos abraçados. Significa dois amigos abraçados</string>
    <string name="action_event">Agenda de Eventos</string>
    <string name="action_places">Locais</string>
</resources>