<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context="br.com.cardapia.company.acessmap.AboutAppActivity">


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="@dimen/appbar_padding_top"
        app:contentPadding="@dimen/appbar_padding_top">

        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/about_scroll"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:background="@drawable/border_bottom"
                    android:text="@string/action_about"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="16dp"
                    android:text="@string/about_detail"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="16dp"
                    android:text="@string/about_detail_1"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="16dp"
                    android:text="@string/about_detail_2"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="16dp"
                    android:text="@string/about_detail_3"/>


                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_mail_contact"
                    android:background="@null"
                    android:paddingTop="16dp"
                    android:contentDescription="@string/send_feedback_mail"
                    android:src="@drawable/if_mail_287559"/>

            </LinearLayout>


        </ScrollView>

    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>
