<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.cardapia.company.acessmap.PreferencesActivity$PlaceholderFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/imgProfile"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/foto_perfil"
            android:src="@drawable/profile_icon"
            app:civ_border_color="@color/colorBlack"
            app:civ_border_width="2dp" />

        <ImageButton
            android:id="@+id/btnImgProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="13dp"
            android:background="@null"
            android:contentDescription="@string/tooltip_foto"
            app:srcCompat="@drawable/baseline_add_a_photo_black_48" />


        <TextView
            android:id="@+id/lblEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/imgProfile"
            android:text="@string/email"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lblEmail"
            android:layout_marginTop="5dp"
            android:ems="20"
            android:hint="@string/email_usuario"
            android:minHeight="@dimen/blind_min_height_touch_area"
            android:inputType="textEmailAddress"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/lblNome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/txtEmail"
            android:layout_marginTop="30dp"
            android:text="@string/name" />

        <EditText
            android:id="@+id/txtNome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/lblNome"
            android:layout_marginTop="5dp"
            android:ems="20"
            android:hint="@string/nome_usuario"
            android:minHeight="@dimen/blind_min_height_touch_area"
            android:inputType="textPersonName"
            android:textColor="@color/black" />


        <TextView
            android:id="@+id/lblDataNascimento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/txtNome"
            android:layout_marginTop="30dp"
            android:text="@string/data_nasc"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/txtDataNasc"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/lblDataNascimento"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:minHeight="@dimen/blind_min_height_touch_area"
            android:enabled="true"
            android:hint="@string/formato_data"
            android:inputType="date"
            android:textColor="@color/black" />

    </RelativeLayout>


</ScrollView>